# cnbiros_robotino_bci

./: CMakeLists.txt  package.xml
kinectdata/506982542542/: calib_color.yaml
launch/: kinect2_bridge.launch  old  record_kinect2.launch  ros_robotino_telepresence.launch  ros_robotino_tracking_kinect2.launch
scripts/: cnbiros_environment_setup.sh  remote_environment_loader.sh
